@@ -6,18 +6,11 @@ Keyring Backend implementations
 
 from __future__ import with_statement
 
-import os
 import sys
-import base64
 
 import keyring.util.escape
-from keyring.util import properties
 import keyring.util.platform
 import keyring.py25compat
-try:
-    from keyczar import keyczar
-except ImportError:
-    pass
 
 # for backward-compatibility
 from .errors import PasswordSetError, InitError
@@ -158,222 +151,10 @@ from keyring.backends.keyczar import BaseCrypter as BaseKeyczarCrypter
 from keyring.backends.keyczar import Crypter as KeyczarCrypter
 from keyring.backends.keyczar import EnvironCrypter as EnvironKeyczarCrypter
 from keyring.backends.Google import KeyczarDocsKeyring as EnvironGoogleDocsKeyring
-
-class BasicPyfilesystemKeyring(KeyringBackend):
-    """BasicPyfilesystemKeyring is a Pyfilesystem-based implementation of
-    keyring.
-
-    It stores the password directly in the file, and supports
-    encryption and decryption. The encrypted password is stored in base64
-    format.
-    Being based on Pyfilesystem the file can be local or network-based and
-    served by any of the filesystems supported by Pyfilesystem including Amazon
-    S3, FTP, WebDAV, memory and more.
-    """
-
-    _filename = 'keyring_pyf_pass.cfg'
-
-    def __init__(self, crypter, filename=None, can_create=True,
-                 cache_timeout=None):
-        super(BasicPyfilesystemKeyring, self).__init__()
-        self._crypter = crypter
-        self._filename = (filename or
-                          os.path.join(keyring.util.platform.data_root(),
-                                       self.__class__._filename))
-        self._can_create = can_create
-        self._cache_timeout = cache_timeout
-
-    @properties.NonDataProperty
-    def file_path(self):
-        """
-        The path to the file where passwords are stored. This property
-        may be overridden by the subclass or at the instance level.
-        """
-        return os.path.join(keyring.util.platform.data_root(), self.filename)
-
-    @property
-    def filename(self):
-        """The filename used to store the passwords.
-        """
-        return self._filename
-
-    def encrypt(self, password):
-        """Encrypt the password.
-        """
-        if not password or not self._crypter:
-            return password or ''
-        return self._crypter.encrypt(password)
-
-    def decrypt(self, password_encrypted):
-        """Decrypt the password.
-        """
-        if not password_encrypted or not self._crypter:
-            return password_encrypted or ''
-        return self._crypter.decrypt(password_encrypted)
-
-    def _open(self, mode='rb'):
-        """Open the password file in the specified mode
-        """
-        import fs.opener
-        import fs.errors
-        import fs.path
-        import fs.remote
-        open_file = None
-        writeable = 'w' in mode or 'a' in mode or '+' in mode
-        try:
-            # NOTE: currently the MemOpener does not split off any filename
-            #       which causes errors on close()
-            #       so we add a dummy name and open it separately
-            if (self.filename.startswith('mem://') or
-                self.filename.startswith('ram://')):
-                open_file = fs.opener.fsopendir(self.filename).open('kr.cfg',
-                                                                    mode)
-            else:
-                if not hasattr(self, '_pyfs'):
-                    # reuse the pyfilesystem and path
-                    self._pyfs, self._path = fs.opener.opener.parse(self.filename,
-                                               writeable=writeable)
-                    # cache if permitted
-                    if self._cache_timeout is not None:
-                        self._pyfs = fs.remote.CacheFS(
-                            self._pyfs, cache_timeout=self._cache_timeout)
-                open_file = self._pyfs.open(self._path, mode)
-        except fs.errors.ResourceNotFoundError:
-            if self._can_create:
-                segments = fs.opener.opener.split_segments(self.filename)
-                if segments:
-                    # this seems broken, but pyfilesystem uses it, so we must
-                    fs_name, credentials, url1, url2, path = segments.groups()
-                    assert fs_name, 'Should be a remote filesystem'
-                    host = ''
-                    # allow for domain:port
-                    if ':' in url2:
-                        split_url2 = url2.split('/', 1)
-                        if len(split_url2) > 1:
-                            url2 = split_url2[1]
-                        else:
-                            url2 = ''
-                        host = split_url2[0]
-                    pyfs = fs.opener.opener.opendir('%s://%s' %(fs_name, host))
-                    # cache if permitted
-                    if self._cache_timeout is not None:
-                        pyfs = fs.remote.CacheFS(
-                            pyfs, cache_timeout=self._cache_timeout)
-                    url2_path, url2_filename = fs.path.split(url2)
-                    if url2_path and not pyfs.exists(url2_path):
-                        pyfs.makedir(url2_path, recursive=True)
-                else:
-                    # assume local filesystem
-                    import fs.osfs
-                    full_url = fs.opener._expand_syspath(self.filename)
-                    url2_path, url2 = fs.path.split(full_url)
-                    pyfs = fs.osfs.OSFS(url2_path)
-
-                try:
-                    # reuse the pyfilesystem and path
-                    self._pyfs = pyfs
-                    self._path = url2
-                    return pyfs.open(url2, mode)
-                except fs.errors.ResourceNotFoundError:
-                    if writeable:
-                        raise
-                    else:
-                        pass
-            # NOTE: ignore read errors as the underlying caller can fail safely
-            if writeable:
-                raise
-            else:
-                pass
-        return open_file
-
-    @property
-    def config(self):
-        """load the passwords from the config file
-        """
-        if not hasattr(self, '_config'):
-            raw_config = configparser.RawConfigParser()
-            f = self._open()
-            if f:
-                raw_config.readfp(f)
-                f.close()
-            self._config = raw_config
-        return self._config
-
-    def get_password(self, service, username):
-        """Read the password from the file.
-        """
-        service = escape_for_ini(service)
-        username = escape_for_ini(username)
-
-        # fetch the password
-        try:
-            password_base64 = self.config.get(service, username).encode()
-            # decode with base64
-            password_encrypted = base64.decodestring(password_base64)
-            # decrypted the password
-            password = self.decrypt(password_encrypted).decode('utf-8')
-        except (configparser.NoOptionError, configparser.NoSectionError):
-            password = None
-        return password
-
-    def set_password(self, service, username, password):
-        """Write the password in the file.
-        """
-        service = escape_for_ini(service)
-        username = escape_for_ini(username)
-
-        # encrypt the password
-        password = password or ''
-        password_encrypted = self.encrypt(password.encode('utf-8'))
-
-        # encode with base64
-        password_base64 = base64.encodestring(password_encrypted).decode()
-        # write the modification
-        if not self.config.has_section(service):
-            self.config.add_section(service)
-        self.config.set(service, username, password_base64)
-        config_file = self._open('w')
-        self.config.write(config_file)
-        config_file.close()
-
-    def supported(self):
-        """Applicable when Pyfilesystem installed, but do not recommend.
-        """
-        try:
-            from fs.opener import fsopen
-            return 0
-        except ImportError:
-            return -1
-
-class UnencryptedPyfilesystemKeyring(BasicPyfilesystemKeyring):
-    """Unencrypted Pyfilesystem Keyring
-    """
-
-    def __init__(self, filename=None, can_create=True, cache_timeout=None):
-        super(UnencryptedPyfilesystemKeyring, self).__init__(
-            NullCrypter(), filename=filename, can_create=can_create,
-            cache_timeout=cache_timeout)
-
-class EncryptedPyfilesystemKeyring(BasicPyfilesystemKeyring):
-    """Encrypted Pyfilesystem Keyring
-    """
-
-    _filename = 'crypted_pyf_pass.cfg'
-
-    def __init__(self, crypter, filename=None, can_create=True,
-                 cache_timeout=None):
-        super(EncryptedPyfilesystemKeyring, self).__init__(
-            crypter, filename=filename, can_create=can_create,
-            cache_timeout=cache_timeout)
-
-class EnvironEncryptedPyfilesystemKeyring(EncryptedPyfilesystemKeyring):
-    """Encrypted Pyfilesystem Keyring using Keyczar keysets specified in
-    environment vars
-    """
-
-    def __init__(self):
-        super(EnvironEncryptedPyfilesystemKeyring, self).__init__(
-            EnvironKeyczarCrypter())
+from keyring.backends.pyfs import BasicKeyring as BasicPyfilesystemKeyring
+from keyring.backends.pyfs import PlaintextKeyring as UnencryptedPyfilesystemKeyring
+from keyring.backends.pyfs import EncryptedKeyring as EncryptedPyfilesystemKeyring
+from keyring.backends.pyfs import KeyczarKeyring as EnvironEncryptedPyfilesystemKeyring
 
 class MultipartKeyringWrapper(KeyringBackend):
 
